tests/compile_fail/modulo_pointer/source.c
int main(void) {
    int x;
    int *p;
    p = &x;
    return p % 2;
}
